added beta_binomial3 with logit link function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export(average_endpoints)
 export(bayesnecformula)
 export(beta_binomial2_lpmf)
 export(beta_binomial2_rng)
+export(beta_binomial3_lpmf)
+export(beta_binomial3_rng)
 export(bnec)
 export(bnec_newdata)
 export(bnf)
@@ -67,12 +69,15 @@ export(expand_nec)
 export(ggbnec_data)
 export(is_manecsummary)
 export(log_lik_beta_binomial2)
+export(log_lik_beta_binomial3)
 export(make_brmsformula)
 export(models)
 export(nec)
 export(nsec)
 export(posterior_epred_beta_binomial2)
+export(posterior_epred_beta_binomial3)
 export(posterior_predict_beta_binomial2)
+export(posterior_predict_beta_binomial3)
 export(pull_brmsfit)
 export(pull_out)
 export(pull_prior)
